--- a/AboutUs.html
+++ b/AboutUs.html
@@ -44,7 +44,7 @@
                 </p>
             </div>
             <div class="profileupper-bubukteh">
-                <img src="Asset/bubuk teh.png" alt="">
+                <img src="Asset/bubukteh.png" alt="">
             </div>
         </div>
 
@@ -52,7 +52,7 @@
             <div class="uppercolumn">
                 <div class="uppercolumn-1">
                     <div class="profileupper-img-1">
-                        <img src="Asset/aboutupper img 1.png" alt="">
+                        <img src="Asset/aboutupperimg1.png" alt="">
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <div class="uppercolumn">
                 <div class="uppercolumn-2">
                     <div class="profileupper-img-2">
-                        <img src="Asset/aboutupper img 2.png" alt="">
+                        <img src="Asset/aboutupperimg2.png" alt="">
                     </div>
                 </div>
             </div>
@@ -77,20 +77,20 @@
                     <div class="column">
                         <div class= "column-1">
                             <div class="image-1">
-                                <img src="Asset/isi about.png" alt="">
+                                <img src="Asset/isiabout.png" alt="">
                             </div> 
                             <div class="image-2">
-                                <img src="Asset/isi about 2.png" alt="">
+                                <img src="Asset/isiabout2.png" alt="">
                             </div>
                         </div>
                     </div>
                     <div class="column">
                         <div class="column-2">
                             <div class="image-3">
-                                <img src="Asset/isi about 3.png" alt="">
+                                <img src="Asset/isiabout3.png" alt="">
                             </div>   
                             <div class="image-4">
-                                <img src="Asset/isi about 4.png" alt="">
+                                <img src="Asset/isiabout4.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -148,34 +148,34 @@
         <h4><span>TeavoU</span> Team</h4>
         <div class="TeavoUTeamcard">
             <div class="TeavoUTeamcard-left">
-                <div><img src="Asset/team azzizah.png" alt="">
+                <div><img src="Asset/teamazzizah.png" alt="">
                     <div class="TeavoUTeamcard-text">
                         <p>Nur Azzizah</p>
                     </div> 
                 </div>
-                <div><img src="Asset/team fadhel.png" alt="">
+                <div><img src="Asset/teamfadhel.png" alt="">
                     <div class="TeavoUTeamcard-text">
-                        <p>Akhmad Fadhel</p>
+                        <p>Akhmad Fadhel Barokah</p>
                     </div>                 
                 </div>
-                <div><img src="Asset/team nisrina.png"  alt="">
+                <div><img src="Asset/teamnisrina.png"  alt="">
                     <div class="TeavoUTeamcard-text">
                     <p>Nisrina Nurhasna</p>
                     </div> 
                 </div>
             </div>
             <div class="TeavoUTeamcard-right">
-                <div><img src="Asset/team diah.png" alt="">
+                <div><img src="Asset/teamdiah.png" alt="">
                 <div class="TeavoUTeamcard-text">
                     <p>I Gusti Diah Arishma Okayani </p>
                 </div> 
             </div>
-            <div><img src="Asset/team rifqi.png" alt="">
+            <div><img src="Asset/teamrifqi.png" alt="">
                 <div class="TeavoUTeamcard-text">
                     <p>Rifqi Nur Permadi</p>
                 </div> 
             </div>
-            <div><img src="Asset/team balqis.png" alt="">
+            <div><img src="Asset/teambalqis.png" alt="">
                 <div class="TeavoUTeamcard-text">
                     <p>Balqis Ramadhillah</p>
                 </div> 
@@ -194,7 +194,7 @@
             <!-- SLIDE 1 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 2.png" alt="Image 1">
+                    <img src="Asset/Galeryabout2.png" alt="Image 1">
                 </div>
 
                 <div class="card-body">
@@ -209,7 +209,7 @@
             <!-- SLIDE 2 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 3.png" alt="Image 1">
+                    <img src="Asset/Galeryabout3.png" alt="Image 1">
                 </div>
 
                 <div class="card-body">
@@ -224,7 +224,7 @@
             <!-- SLIDE 3 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout 1.png" alt="Image 1">
+                    <img src="Asset/Galeryabout1.png" alt="Image 1">
                 </div>
                 
                 <div class="card-body">
