--- a/index.html
+++ b/index.html
@@ -16,7 +16,19 @@
     </a>
 
     <!-- Menu Icon -->
-    <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i>
+    <!-- <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt=""></i> -->
+
+    <!-- coba navbar dropdown -->
+    <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">
+        <img src="Asset/menu.svg" alt="menubtn">
+        </button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="AboutUs.html">AboutUs</a>
+            <a href="Product.html">Product</a>
+        </div>
+    </div>
 
     <!-- Links -->
     <ul class="navbar">
