update minor aboutus, home, quiz
- converting img src file to link hosting

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
     <link rel="stylesheet" href="About Us/AboutUsStyle.css">
-    <link rel="icon" href="Asset/Logo.png" type="image/x-icon">
+    <link rel="icon" href="https://iili.io/JIrTgwX.png" type="image/x-icon">
 </head>
 <body>
     <!-- NavBar Start -->
     <header>
         <a href="#" class="logo">
-            <img src="Asset/Logo.png" alt="">
+            <img src="https://iili.io/JIrTgwX.png" alt="logo">
         </a>
             
         <!-- coba navbar dropdown -->
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">
-            <img src="Asset/menu.svg" alt="menubtn">
+            <img src="https://iili.io/JIrR1a4.png" alt="menubtn">
             </button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="index.html">Home</a>
@@ -44,7 +44,7 @@
                 </p>
             </div>
             <div class="profileupper-bubukteh">
-                <img src="Asset/bubukteh.png" alt="">
+                <img src="https://iili.io/JIr73LF.png" alt="bubukteh">
             </div>
         </div>
 
@@ -52,7 +52,7 @@
             <div class="uppercolumn">
                 <div class="uppercolumn-1">
                     <div class="profileupper-img-1">
-                        <img src="Asset/aboutupperimg1.png" alt="">
+                        <img src="https://iili.io/JIrYJaf.png" alt="aboutupperimg1">
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
             <div class="uppercolumn">
                 <div class="uppercolumn-2">
                     <div class="profileupper-img-2">
-                        <img src="Asset/aboutupperimg2.png" alt="">
+                        <img src="https://iili.io/JIrY5ZP.png" alt="aboutupperimg2">
                     </div>
                 </div>
             </div>
@@ -77,20 +77,20 @@
                     <div class="column">
                         <div class= "column-1">
                             <div class="image-1">
-                                <img src="Asset/isiabout.png" alt="">
+                                <img src="https://iili.io/JIrYmNV.png" alt="isiabout">
                             </div> 
                             <div class="image-2">
-                                <img src="Asset/isiabout2.png" alt="">
+                                <img src="https://iili.io/JIrYbAQ.png" alt="isiabout2">
                             </div>
                         </div>
                     </div>
                     <div class="column">
                         <div class="column-2">
                             <div class="image-3">
-                                <img src="Asset/isiabout3.png" alt="">
+                                <img src="https://iili.io/JIrYpDB.png" alt="isiabout3">
                             </div>   
                             <div class="image-4">
-                                <img src="Asset/isiabout4.png" alt="">
+                                <img src="https://iili.io/JIrYDHx.png" alt="isiabout4">
                             </div>
                         </div>
                     </div>
@@ -148,34 +148,34 @@
         <h4><span>TeavoU</span> Team</h4>
         <div class="TeavoUTeamcard">
             <div class="TeavoUTeamcard-left">
-                <div><img src="Asset/teamazzizah.png" alt="">
+                <div><img src="https://iili.io/JIraks1.png" alt="Azzizah">
                     <div class="TeavoUTeamcard-text">
                         <p>Nur Azzizah</p>
                     </div> 
                 </div>
-                <div><img src="Asset/teamfadhel.png" alt="">
+                <div><img src="https://iili.io/JIrardJ.png" alt="Fadhel">
                     <div class="TeavoUTeamcard-text">
                         <p>Akhmad Fadhel Barokah</p>
                     </div>                 
                 </div>
-                <div><img src="Asset/teamnisrina.png"  alt="">
+                <div><img src="https://iili.io/JIra45v.png" alt="Nisrina">
                     <div class="TeavoUTeamcard-text">
                     <p>Nisrina Nurhasna</p>
                     </div> 
                 </div>
             </div>
             <div class="TeavoUTeamcard-right">
-                <div><img src="Asset/teamdiah.png" alt="">
+                <div><img src="https://iili.io/JIraUga.png" alt="Diah">
                 <div class="TeavoUTeamcard-text">
                     <p>I Gusti Diah Arishma Okayani </p>
                 </div> 
             </div>
-            <div><img src="Asset/teamrifqi.png" alt="">
+            <div><img src="https://iili.io/JIra8qF.png" alt="Rifqi">
                 <div class="TeavoUTeamcard-text">
                     <p>Rifqi Nur Permadi</p>
                 </div> 
             </div>
-            <div><img src="Asset/teambalqis.png" alt="">
+            <div><img src="https://iili.io/JIraS0g.png" alt="Balqis">
                 <div class="TeavoUTeamcard-text">
                     <p>Balqis Ramadhillah</p>
                 </div> 
@@ -194,45 +194,45 @@
             <!-- SLIDE 1 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout2.png" alt="Image 1">
+                    <img src="https://iili.io/JIrcgC7.png" alt="Gallery2">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Gallery6.jpg" alt="Image 1">
+                    <img src="https://iili.io/JIrcsvj.png" alt="Gallery6">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Gallery4.jpg" alt="Image 1">
+                    <img src="https://iili.io/JIrcP3u.jpg" alt="Gallery4">
                 </div>
             </div>
 
             <!-- SLIDE 2 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout3.png" alt="Image 1">
+                    <img src="https://iili.io/JIrc8j2.png" alt="Galery3">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Gallery7.jpg" alt="Image 1">
+                    <img src="https://iili.io/JIrcLyx.jpg" alt="Gallery7">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Gallery8.jpg" alt="Image 1">
+                    <img src="https://iili.io/JIrciYb.jpg" alt="Gallery8">
                 </div>
             </div>
 
             <!-- SLIDE 3 -->
             <div class="slide_galleryTeam">
                 <div class="card-body">
-                    <img src="Asset/Galeryabout1.png" alt="Image 1">
+                    <img src="https://iili.io/JIrcSQS.png" alt="Gallery1">
                 </div>
                 
                 <div class="card-body">
-                    <img src="Asset/Gallery5.png" alt="Image 1">
+                    <img src="https://iili.io/JIrc44e.webp" alt="Gallery5">
                 </div>
 
                 <div class="card-body">
-                    <img src="Asset/Gallery9.jpeg" alt="Image 1">
+                    <img src="https://iili.io/JIrcZTQ.jpg" alt="Gallery9">
                 </div>
             </div>
         </div>
@@ -249,13 +249,13 @@
 <footer class="footer">
     <div class="footer-left">
         <div class="credit-cards">
-            <img src="Asset/whiteLogo.svg" alt="">
+            <img src="https://iili.io/JIr1Hmv.png" alt="whiteLogo">
 
             <div class="footer-media">
-                <a href="#" class="instagram"><img src="Asset/instagram.svg" alt=""></a>
-                <a href="#" class="twitter"><img src="Asset/twitter.svg" alt=""></a>
-                <a href="#" class="facebook"><img src="Asset/facebook.svg" alt=""></a>
-                <a href="#" class="youtube"><img src="Asset/youtube.svg" alt=""></a>
+                <a href="#" class="instagram"><img src="https://iili.io/JIr0D11.png" alt="iconinstagram"></a>
+                <a href="#" class="twitter"><img src="https://iili.io/JIr0y7a.png" alt="icontwitter"></a>
+                <a href="#" class="facebook"><img src="https://iili.io/JIr0brF.png" alt="iconfb"></a>
+                <a href="#" class="youtube"><img src="https://iili.io/JIr0pdg.png" alt="iconyoutube"></a>
                 <!-- masukin media social what's up -->
             </div>
         </div>
@@ -263,17 +263,17 @@
 
     <div class="footer-center">
         <div class="location">
-            <img src="Asset/location.svg" alt="">
+            <img src="https://iili.io/JIrExF1.png" alt="locationicon">
             <p><a href="#"><span>Indonesia</span> DKI Jakarta, Jakarta Selatan</a></p>
         </div>
 
         <div class="phone">
-            <img src="Asset/phone.svg" alt="">
+            <img src="https://iili.io/JIr19kJ.png" alt="phoneicon">
             <p><a href="#">+62 812-3456-7890</a></p>
         </div>
 
         <div class="mail">
-            <img src="Asset/mail.svg" alt="">
+            <img src="https://iili.io/JIrEn6P.png" alt="iconemail">
             <p><a href="#">support@teavou.com</a></p>
         </div>
     </div>
