--- a/quiz.html
+++ b/quiz.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>JS Quiz Format 1</title>
-<link rel="stylesheet" href="quiz/quiz.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JS Quiz Format 1</title>
+    <link rel="stylesheet" href="quiz/quiz.css">
 </head>
 <body>
     <!-- NavBar Start -->
     <header>
         <!-- insert logo -->
         <a href="#" class="logo">
-            <img src="Asset/Logo.png" alt="logo">
+            <img src="https://iili.io/JIrTgwX.png" alt="logo">
         </a>
         
         <!-- coba navbar dropdown -->
         <div class="dropdown">
             <button onclick="myFunction()" class="dropbtn">
-            <img src="Asset/menu.svg" alt="menubtn">
+                <img src="https://iili.io/JIrR1a4.png" alt="menubtn">
             </button>
             <div id="myDropdown" class="dropdown-content">
                 <a href="index.html">Home</a>
