--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <p>Take part in taking a stroll in the evergreen tea gardens, visit the historical tea heritage sites, and enjoy the various enriching flavors of tea.</p>
     </div>
     <div class="FestivalBooking">
-        <a href="https://forms.gle/BGk8Hi9MmY6c8tzq5"><p>Book your session here</p></a>
+        <p>Book your session <a href="https://forms.gle/BGk8Hi9MmY6c8tzq5">here</a></p>
     </div>
 </section>
 
