--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
     </h4>
 
     <p>Your thoughts inspire us. Help us improve by sharing your feedback. Thank you for being part of our journey</p>
-    <button>Feedback</button>
+    <a href="feedback.html"><button>Feedback</button></a>
 </section>
 
 </main>
