Remove and add code

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AboutUs</title>
-    <link rel="stylesheet" href="About Us/AboutUsStyle.css">
+    <link rel="stylesheet" href="CSS/AboutUsStyle.css">
     <link rel="icon" href="https://iili.io/JIrTgwX.png" type="image/x-icon">
 </head>
 <body>
@@ -298,6 +298,6 @@
 <!-- Section Footer END -->
 
     <!-- Link JS -->
-    <script src="About Us/AboutUsJS.js"></script>
+    <script src="JS/AboutUsJS.js"></script>
 </body>
 </html>
