--- a/Product.html
+++ b/Product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
-    <link rel="stylesheet" href="Product/ProductStyle.css">
+    <link rel="stylesheet" href="CSS/ProductStyle.css">
     <link rel="icon" href="Asset/Logo.png" type="image/x-icon">
 </head>
 
@@ -234,7 +234,7 @@
 
     
    <!-- Link Product JS -->
-<script type="module" src="Product/ProductJS.js"></script>
+<script type="module" src="JS/ProductJS.js"></script>
 <script src="JS/buttonProduct.js"></script>
 
 </body>
