--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>History About Tea</title>
-    <link rel="stylesheet" href="History/historystyle.css">
+    <link rel="stylesheet" href="CSS/historystyle.css">
     
 </head>
 <body>
@@ -176,6 +176,6 @@
   
   
       <!-- Link JS -->
-      <script src="History/history.js"></script>
+      <script src="JS/history.js"></script>
   </body>
   </html>
