--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Quiz Format 1</title>
-    <link rel="stylesheet" href="quiz/quiz.css">
+    <link rel="stylesheet" href="CSS/quiz.css">
 </head>
 <body>
     <!-- NavBar Start -->
@@ -57,6 +57,6 @@
         <button class="button btn-submit" id="submit">Submit</button>
     </div>
 </div>
-<script src="quiz/quiz.js"></script>
+<script src="JS/quiz.js"></script>
 </body>
 </html>
