Remove and add code part 2

--- a/infoTea.html
+++ b/infoTea.html
@@ -30,7 +30,7 @@
     <p id="ParagraphTea">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptates mollitia amet nesciunt quidem commodi officia eaque facere sit laudantium iste hic exercitationem iure unde omnis, veniam, quos maiores magni.</p>
    </div>
 
-   <div id="ImgInfo"><img src="Asset/greentea.png" alt=""></div>
+   <div id="ImgInfo"><img src="https://iili.io/JzNA8Wx.png" alt=""></div>
 
         <!-- <div id="Ingredients">Ingredients <span id="in">in</span> <span id="TextMenu">Green Tea</span></div>
            <div id="TabIngredient">
