--- a/infoTea.html
+++ b/infoTea.html
@@ -22,6 +22,7 @@
             <li><a href="Product.html">Product</a></li>
         </ul>
     </header>
+
 <section class="InfoTea">
     <div id="MenuTea">Origin Tea</div>
    <div class="DeskripsiTea">
@@ -32,39 +33,9 @@
 
    <div id="ImgInfo"><img src="https://iili.io/JzNA8Wx.png" alt=""></div>
 
-        <!-- <div id="Ingredients">Ingredients <span id="in">in</span> <span id="TextMenu">Green Tea</span></div>
-           <div id="TabIngredient">
-                <ol id="listIngredient">
-                    <li>1. Tea Leaves (Camellia sinensis): The leaves of the tea plant are the main ingredient. The type and quality of the leaves, as well as the processing method, contribute to the flavor and aroma of the green tea.</li>
-                    <br>
-                    <li>2. Water: he leaves are steeped in water to extract the flavors and nutrients. The quality of water can influence the taste of the tea.</li>
-                </ol>
+</section">
 
-           </div>
-        </div>
-
-       <div class="value">
-                    <div class="value-card">
-                        <h3 id="textValue" >Value <span id="in">in</span><span id="spanValue">Green Tea</span></h3>
-                        <div class="value-list" >
-                            <div>
-                                <h5>1</h5>
-                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</P>
-                            </div>
-                            <div>
-                                <h5><span>2</span></h5>
-                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</P>
-                            </div>
-                            <div>
-                                <h5>3</h5>
-                                <P>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</P>
-                            </div>
-                        </div> 
-                    </div>
-                </div>   -->
-
-</section id="formOrder">
-
+<section id="formOrder">
 <div class="container">
     <form id="orderForm">
         <label for="namaProduct">Nama Product:</label>
@@ -85,8 +56,7 @@
     
 </section>
 
-
-    <div id="Desserts">
+<section id="Desserts">
         <h3 id="textDesserts" >Desserts <span id="inDesserts">in</span><span id="spanDesserts">Green Tea</span></h3> 
         <div id="grid">      
             <!-- <div id="Desserts1">Matcha Mochi</div>
@@ -97,7 +67,7 @@
             <div id="Desserts7">Green Tea Latte Panna Cotta</div>
             <div id="Desserts6">Matcha Chiffon Cake</div> -->
         </div>
-    </div>
+</section>
 <script type="module" src="Product/ProductJS.js"></script>
 <script src="JS/infoTea.Js"></script>
 </body>
