--- a/infoTea.html
+++ b/infoTea.html
@@ -68,7 +68,7 @@
             <div id="Desserts6">Matcha Chiffon Cake</div> -->
         </div>
 </section>
-<script type="module" src="Product/ProductJS.js"></script>
+<script type="module" src="JS/orderPostt.js"></script>
 <script src="JS/infoTea.Js"></script>
 </body>
 </html>
