--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
               It's been oolong time. Let's find out how much you know about tea!
               Play the quiz below!
             </p>
-            <a href="quiz.html"></a><button class="PlayQuiz">Play</button>
+            <a href="quiz.html"> Play </a>
+            <!-- <button class="PlayQuiz">Play</button> -->
           </div>
         </div>
 
@@ -198,7 +199,8 @@
               Are you captivated by the infusion of aromatic tea leaves that
               soothes your soul? Find out in the quiz below!
             </p>
-            <button class="playQuiz" onclick="startQuiz()">Play</button>
+            <a href="quiz.html"> Play </a>
+            <!-- <button class="playQuiz" onclick="startQuiz()">Play</button> -->
           </div>
         </div>
 
@@ -211,7 +213,8 @@
               Let's find out how pearl-fect you know about tea! Play the quiz
               below!
             </p>
-            <button class="playQuiz" onclick="startQuiz()">Play</button>
+            <a href="quiz.html"> Play </a>
+            <!-- <button class="playQuiz" onclick="startQuiz()">Play</button> -->
           </div>
 
           <div id="quiz-modal" class="modal">
