--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
             flavors of tea.
           </p>
         </div>
-        <div class="FestivalBooking">
+        <!-- <div class="FestivalBooking">
           <p>
             Book your session
             <a href="https://forms.gle/BGk8Hi9MmY6c8tzq5">here</a>
-          </p>
+          </p> -->
         </div>
       </section>
 
@@ -198,7 +198,7 @@
               Are you captivated by the infusion of aromatic tea leaves that
               soothes your soul? Find out in the quiz below!
             </p>
-            <button class="playQuiz" onclick="startQuiz()">Play</button>
+            <a href="quiz.html"></a><button class="PlayQuiz">Play</button>
           </div>
         </div>
 
@@ -211,10 +211,10 @@
               Let's find out how pearl-fect you know about tea! Play the quiz
               below!
             </p>
-            <button class="playQuiz" onclick="startQuiz()">Play</button>
+            <a href="quiz.html"></a><button class="PlayQuiz">Play</button>
           </div>
 
-          <div id="quiz-modal" class="modal">
+          <!-- <div id="quiz-modal" class="modal">
             <div class="modal-content">
               <span class="close" onclick="closeModal()">&times;</span>
               <div id="question-container"></div>
@@ -222,7 +222,7 @@
             </div>
           </div>
         </div>
-        <div class="shapeConten"></div>
+        <div class="shapeConten"></div> -->
       </section>
 
       <!-- Review-->
@@ -233,8 +233,8 @@
         </div>
         <div class="showSlide_spill">
           <div class="slide_spill">
-            <div class="card-spill" id="feedbacks-container">
-              <div class="card-body">
+            <div class="card-spill" id="feedback-form">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrelvp.png" alt="people1" />
                 <h6>Saka</h6>
                 <div class="text-card">
@@ -246,9 +246,9 @@
                     different preferences. Overall, a great product!
                   </p>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrkftt.png" alt="people2" />
                 <h6>Naka</h6>
                 <div class="text-card">
@@ -260,9 +260,9 @@
                     Nevertheless, it's a fantastic product!
                   </p>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrkFAN.png" alt="people3" />
                 <h6>Jacobi</h6>
                 <div class="text-card">
@@ -274,13 +274,13 @@
                     more detailed brewing instructions. Highly recommended!
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
 
           <div class="slide_spill">
             <div class="card-spill" id="feedbacks-container2">
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrkKNI.png" alt="people4" />
                 <h6>Carly</h6>
                 <div class="text-card">
@@ -292,9 +292,9 @@
                     only recommendation. Overall, a fantastic product!
                   </p>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrkCVn.png" alt="people5" />
                 <h6>Calista</h6>
                 <div class="text-card">
@@ -306,9 +306,9 @@
                     preferences. Nevertheless, a top-notch product!
                   </p>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrknPs.png" alt="people6" />
                 <h6>Mayasari</h6>
                 <div class="text-card">
@@ -319,13 +319,13 @@
                     more detailed brewing instructions would make it even
                     better. Overall, a great addition to my tea collection!
                   </p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
           <div class="slide_spill">
-            <div class="card-spill">
-              <div class="card-body">
+            <div class="card-spill" id="feedbacks-container3">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrkzlf.png" alt="people7" />
                 <h6>Elise</h6>
                 <div class="text-card">
@@ -338,9 +338,9 @@
                     again!
                   </p>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrkIS4.png" alt="people8" />
                 <h6>Ivanov</h6>
                 <div class="text-card">
@@ -353,9 +353,9 @@
                     Overall, a fantastic product!
                   </p>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="card-body">
+              <!-- <div class="card-body">
                 <img src="https://iili.io/JIrkxKG.png" alt="people9" />
                 <h6>Johansson</h6>
                 <div class="text-card">
@@ -366,7 +366,7 @@
                     only elegant but also functional.
                   </p>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -454,5 +454,10 @@
 
     <!-- Link JS -->
     <script src="JS/HomeJS.js"></script>
+    <script src="JS/feedback.js"></script>
+    <script type="module" src="JS/GetFeed.js"></script>
+    <script type="module" src="JS/JSProduck.js"></script>
+    
+
   </body>
 </html>
