--- a/infoTea.html
+++ b/infoTea.html
@@ -50,7 +50,7 @@
         <label for="jmlOrder">Jumlah Order:</label>
         <input type="number" id="jmlOrder" name="jmlOrder" required>
 
-        <button type="button" onclick="submitForm()">Submit</button>
+        <button type="button" onclick="submitForm()">Order</button>
     </form>
 </div>
     
