--- a/index.html
+++ b/index.html
@@ -215,15 +215,10 @@
             </div>
           </div>
           <div class="slide_spill">
-            <div class="card-spill" id="feedbacks-container3">
+            <div class="card-spill" id="feedbacks-container2">
             </div>
           </div>
-        </div>
-        <div class="dots_spill">
-          <span class="dot_spill"></span>
-          <span class="dot_spill"></span>
-          <span class="dot_spill"></span>
-        </div>
+
       </section>
 
       <section id="fedbacks">
@@ -298,9 +293,9 @@
     </footer>
     
     <script src="JS/HomeJS.js"></script>
-    <script src="JS/feedback.js"></script>
+    <!-- <script type="module" src="JS/Feedback.js"></script> -->
     <script type="module" src="JS/GetFeed.js"></script>
-    <script type="module" src="JS/JSProduck.js"></script>
+    <!-- <script type="module" src="JS/JSProduck.js"></script> -->
     
 
   </body>
