--- a/infoTea.html
+++ b/infoTea.html
@@ -21,18 +21,6 @@
         </ul>
     </header>
 
-<section class="InfoTea">
-    <div id="MenuTea">Origin Tea</div>
-   <div class="DeskripsiTea">
-    <h3 id="namaTea">Green Tea</h3>
-    <h5 id="price">Price : $15</h5>
-    <p id="ParagraphTea">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptates mollitia amet nesciunt quidem commodi officia eaque facere sit laudantium iste hic exercitationem iure unde omnis, veniam, quos maiores magni.</p>
-   </div>
-
-   <div id="ImgInfo"><img src="https://iili.io/JzNA8Wx.png" alt=""></div>
-
-</section">
-
 <section id="formOrder">
 <div class="container">
     <form id="orderForm">
@@ -54,21 +42,8 @@
     
 </section>
 
-<section id="Desserts">
-        <h3 id="textDesserts" >Desserts <span id="inDesserts">in</span><span id="spanDesserts">Green Tea</span></h3> 
-        <div id="grid">      
-            <div id="Desserts1">Matcha Mochi</div>
-            <div id="Desserts2">Matcha Tiramisu</div>
-            <div id="Desserts3">Matcha Pancakes</div>
-            <div id="Desserts4">Matcha Cheesecake</div>
-            <div id="Desserts5">Matcha Anmitsu</div>
-            <div id="Desserts7">Green Tea Latte Panna Cotta</div>
-            <div id="Desserts6">Matcha Chiffon Cake</div>
-        </div>
-</section>
-    <script src="JS/HomeJS.js"></script>
     <script src="JS/feedback.js"></script>
     <script type="module" src="JS/GetFeed.js"></script>
-    <script type="module" src="JS/JSProduck.js"></script>
+    <script type="module" src="JS/orderPostt.js"></script>
 </body>
 </html>
