--- a/AboutUs.html
+++ b/AboutUs.html
@@ -157,7 +157,7 @@
             <div class="TeavoUTeamcard-right">
                 <div><img src="https://iili.io/JIraUga.png" alt="Diah">
                 <div class="TeavoUTeamcard-text">
-                    <p>I Gusti Diah Arishma Okayani </p>
+                    <p>I Gusti Agung Diah Arishma Okayani </p>
                 </div> 
             </div>
             <div><img src="https://iili.io/JIra8qF.png" alt="Rifqi">
