--- a/Product.html
+++ b/Product.html
@@ -11,22 +11,24 @@
   <body>
     <header>
       <a href="#" class="logo">
-        <img src="Asset/Logo.png" alt="" />
+        <img src="https://iili.io/JIrTgwX.png" alt="logo">
       </a>
+      <div class="dropdown">
+        <button onclick="myFunction()" class="dropbtn">
+        <img src="https://iili.io/JIrR1a4.png" alt="menubtn">
+        </button>
+        <div id="myDropdown" class="dropdown-content">
+            <a href="index.html">Home</a>
+            <a href="AboutUs.html">AboutUs</a>
+            <a href="Product.html">Product</a>
+        </div>
+      </div>
+
       <ul class="navbar">
         <li><a href="index.html">Home</a></li>
         <li><a href="AboutUs.html">About Us</a></li>
         <li class="active_nav"><a href="#">Product</a></li>
       </ul>
-      <div class="toogle_btn">
-        <i class="menu" id="menu-icon"><img src="Asset/menu.svg" alt="" /></i>
-      </div>
-
-      <div class="dropdown_menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="AboutUs.html">About Us</a></li>
-        <li><a href="#">Product</a></li>
-      </div>
     </header>
     <section class="desc" id="desc">
       <div class="grid">
