--- a/index.html
+++ b/index.html
@@ -153,15 +153,15 @@
 
         <div class="tab">
           <button class="tablinks" onclick="openTea(event, 'tea1')">
-            <img src="https://iili.io/JIrOTqG.png" alt="tea1" />
+            <img src="asset/HomeTea.svg" alt="tea1" />
           </button>
 
           <button class="tablinks" onclick="openTea(event, 'tea2')">
-            <img src="https://iili.io/JIrOu1f.png" alt="tea2" />
+            <img src="asset/GreenTea.svg" alt="tea2" />
           </button>
 
           <button class="tablinks" onclick="openTea(event, 'tea3')">
-            <img src="https://iili.io/JIrOzss.png" alt="tea3" />
+            <img src="asset/GreenTeaBest.svg" alt="tea3" />
           </button>
         </div>
 
